Update source code

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,41 +2,44 @@
 # Copyright (c) 2022 Anh Tester
 # Automation Framework Selenium
 #
-# Data Test
-excelDataFilePath=src/test/resources/testdatafile/ClientsDataExcel.xlsx
 # Config system
-author=AnhTester
-projectName=Automation Framework Selenium | Anh Tester
-reportTitle=Automation Framework Selenium Report | Anh Tester
-extentReportName=ExtentReports
-extentReportFolder=ExtentReports
-exportVideoPath=ExportData/Videos
-exportCapturePath=ExportData/Images
+AUTHOR=AnhTester
 WAIT_DEFAULT=5
-WAIT_IMPLICIT=30
+WAIT_IMPLICIT=20
 WAIT_EXPLICIT=10
 WAIT_PAGE_LOADED=30
 # Smart Wait all steps
 # ACTIVE_PAGE_LOADED=true shall wait for the page to load for every step
 ACTIVE_PAGE_LOADED=true
-# WAIT_SLEEP_STEP is the delay time for every step
+# WAIT_SLEEP_STEP is the delay time for every step - Second
 WAIT_SLEEP_STEP=0
-# Browser default chrome, edge, opera, firefox, safari
-browser=chrome
+# Browser default chrome, edge, firefox, safari
+BROWSER=chrome
 # target execution: local or remote
-target=local
+TARGET=local
 # headless mode only for chrome or firefox and local execution
-headless=false
-base_url=https://crm.anhtester.com/
+HEADLESS=false
+URL_CRM=https://crm.anhtester.com/
 # grid url and port
-remote_url=localhost
-remote_port=4444
+REMOTE_URL=localhost
+REMOTE_PORT=4444
+# Report information
+PROJECT_NAME=Automation Framework Selenium | Anh Tester
+REPORT_TITLE=Report | Automation Framework Selenium | Anh Tester
+EXTENT_REPORT_NAME=ExtentReports
+EXTENT_REPORT_FOLDER=ExtentReports
+EXPORT_VIDEO_PATH=ExportData/Videos
+EXPORT_CAPTURE_PATH=ExportData/Images
+# Zip folder report after run test --> yes or no
+ZIP_FOLDER=no
+# Video Record
+VIDEO_RECORD=no
 #override_reports --> yes or no
 #If no -> Report name will be like
 #   - Windows_10_Tue_Oct_05_02_30_46_IST_2022_ExtentReports.html
 #   - Mac_OS_X_Tue_Feb_22_16_10_47_IST_2022_ExtentReports.html
 #If yes -> Report name will be ExtentReports.html
-override_reports=yes
+OVERRIDE_REPORTS=no
 #open_reports_after_execution--> yes or no
 open_reports_after_execution=yes
 #send_email_to_users --> yes or no
