--- a/src/test/resources/config/datatest.properties
+++ b/src/test/resources/config/datatest.properties
@@ -2,10 +2,7 @@
 # Copyright (c) 2022 Anh Tester
 # Automation Framework Selenium
 #
-
-emailAdmin=admin02@mailinator.com
-emailTeamMember=tmb01@mailinator.com
-emailTeamLead=tld01@mailinator.com
 password=T+wyT5u9cOelDJbBWNgxLw
-txtFilePath=src/test/resources/testdatafile/TxtFileData.txt
-excelClients=src/test/resources/testdatafile/ClientsDataExcel.xlsx
+TXT_FILE_PATH=src/test/resources/testdata/TxtFileData.txt
+EXCEL_DATA_FILE_PATH=src/test/resources/testdata/ClientsDataExcel.xlsx
+JSON_DATA_FILE_PATH=src/test/resources/config/config.json
