--- a/src/test/resources/objects/crm_locators.properties
+++ b/src/test/resources/objects/crm_locators.properties
@@ -1,11 +1,12 @@
 #SignInPage
-inputEmailID=id&&email
 inputEmail=xpath&&//input[@id='email']
 inputPassword=xpath&&//input[@id='password']
 buttonSignIn=xpath&&//button[normalize-space()='Sign in']
 labelEmailError=id&&email-error
+labelAuthentication=xpath&&//div[@role='alert']
 #--------------------------------------------------
 #DashboardPage
+menuDashboard=xpath&&//span[normalize-space()='Dashboard']
 menuProjects=xpath&&//span[normalize-space()='Projects']
 menuClients=xpath&&//span[normalize-space()='Clients']
 #--------------------------------------------------
