Update version 1.0.0 PREVIEW

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,5 @@
 #Declare loggers
-status=error
+status=warn
 name=Log4j2PropertiesConfig
 appenders=a_console, a_rolling
 rootLogger.level=info
@@ -10,11 +10,11 @@ rootLogger.appenderRef.ar_rolling.ref=RollingAppender
 appender.a_console.type=Console
 appender.a_console.name=StdoutAppender
 appender.a_console.layout.type=PatternLayout
-appender.a_console.layout.pattern=[%-5level] %d{dd-MM-yyyy HH:mm:ss} [%c{1}] - %msg%n
+appender.a_console.layout.pattern=[%level] %d{dd-MM-yyyy HH:mm:ss} [%c{1}] - %msg%n
 #Rolling Logger
 appender.a_rolling.type=RollingFile
 appender.a_rolling.name=RollingAppender
-appender.a_rolling.layout.pattern=[%-5level] %d{dd-MM-yyyy HH:mm:ss} [%t] %c{1} - %msg%n
+appender.a_rolling.layout.pattern=[%level] %d{dd-MM-yyyy HH:mm:ss} [%t] [%c{1}] - %msg%n
 appender.a_rolling.fileName=logs/applog.log
 appender.a_rolling.filePattern=logs/applog-%d{dd-MM-yyyy}.log
 appender.a_rolling.layout.type=PatternLayout
