--- a/pom.xml
+++ b/pom.xml
@@ -17,16 +17,16 @@
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 
-        <cucumber.java.version>7.3.4</cucumber.java.version>
-        <gherkin.version>23.0.0</gherkin.version>
+        <cucumber.java.version>7.8.0</cucumber.java.version>
+        <gherkin.version>24.0.0</gherkin.version>
         <cucumber-reporting.version>5.7.0</cucumber-reporting.version>
-        <selenium.version>4.3.0</selenium.version>
-        <testng.version>7.4.0</testng.version>
-        <webdrivermanager.version>5.2.1</webdrivermanager.version>
+        <selenium.version>4.4.0</selenium.version>
+        <testng.version>7.6.1</testng.version>
+        <webdrivermanager.version>5.3.0</webdrivermanager.version>
         <aspectjweaver.version>1.9.9.1</aspectjweaver.version>
         <ashot.version>1.5.4</ashot.version>
-        <log4j.version>2.17.2</log4j.version>
-        <allure-testng.version>2.18.1</allure-testng.version>
+        <log4j.version>2.19.0</log4j.version>
+        <allure-testng.version>2.19.0</allure-testng.version>
         <allure-maven.version>2.10.0</allure-maven.version>
         <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
         <allure.cmd.download.url>
@@ -40,14 +40,14 @@
         <assertj.version>3.23.1</assertj.version>
         <javafaker.version>1.0.2</javafaker.version>
         <monte-screen-recorder.version>0.7.7.0</monte-screen-recorder.version>
-        <mysql-connector-java.version>8.0.29</mysql-connector-java.version>
+        <mysql-connector-java.version>8.0.30</mysql-connector-java.version>
         <google.zxing.version>3.5.0</google.zxing.version>
         <lombok.version>1.18.24</lombok.version>
         <google.guava.version>31.1-jre</google.guava.version>
         <data.supplier.version>1.9.7</data.supplier.version>
         <javax.mail.version>1.6.2</javax.mail.version>
         <zip.version>1.15</zip.version>
-        <jackson.version>2.13.3</jackson.version>
+        <jackson.version>2.13.4</jackson.version>
 
         <!-- Suite XML path -->
         <suite.signin.simple>src/test/resources/suites/SignIn-simple.xml</suite.signin.simple>
@@ -57,6 +57,14 @@
     </properties>
 
     <dependencies>
+
+        <!-- telegram_bot -->
+        <!-- https://mvnrepository.com/artifact/com.github.pengrad/java-telegram-bot-api -->
+        <dependency>
+            <groupId>com.github.pengrad</groupId>
+            <artifactId>java-telegram-bot-api</artifactId>
+            <version>6.2.0</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
         <dependency>
@@ -97,14 +105,14 @@
         <dependency>
             <groupId>tech.grasshopper</groupId>
             <artifactId>extentreports-cucumber7-adapter</artifactId>
-            <version>1.6.0</version>
+            <version>1.7.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/tech.grasshopper/extent-pdf-report -->
         <dependency>
             <groupId>tech.grasshopper</groupId>
             <artifactId>extent-pdf-report</artifactId>
-            <version>2.6.0</version>
+            <version>2.7.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.vimalselvam/cucumber-extentsreport -->
@@ -343,6 +351,24 @@
                         <configuration>
                             <suiteXmlFiles>
                                 <suiteXmlFile>${suite.client.simple}</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>feature-file</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>${suite.feature}</suiteXmlFile>
                             </suiteXmlFiles>
                         </configuration>
                     </plugin>
