--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -19,7 +19,7 @@ BROWSER=chrome
 TARGET=local
 # headless mode only for chrome or firefox and local execution
 HEADLESS=false
-URL_CRM=https://crm.anhtester.com/
+URL_CRM=https://rise.fairsketch.com/signin
 # grid url and port
 REMOTE_URL=localhost
 REMOTE_PORT=4444
@@ -30,8 +30,15 @@ EXTENT_REPORT_NAME=ExtentReports
 EXTENT_REPORT_FOLDER=ExtentReports
 EXPORT_VIDEO_PATH=ExportData/Videos
 EXPORT_CAPTURE_PATH=ExportData/Images
+# Send report to Telegram Bot --> yes or no
+# If yes, please input TELEGRAM_TOKEN and TELEGRAM_CHATID
+SEND_REPORT_TO_TELEGRAM=no
+TELEGRAM_TOKEN=
+TELEGRAM_CHATID=
 # Zip folder report after run test --> yes or no
 ZIP_FOLDER=no
+ZIP_FOLDER_PATH=
+ZIP_FOLDER_NAME=
 # Video Record
 VIDEO_RECORD=no
 #override_reports --> yes or no
@@ -39,7 +46,7 @@ VIDEO_RECORD=no
 #   - Windows_10_Tue_Oct_05_02_30_46_IST_2022_ExtentReports.html
 #   - Mac_OS_X_Tue_Feb_22_16_10_47_IST_2022_ExtentReports.html
 #If yes -> Report name will be ExtentReports.html
-OVERRIDE_REPORTS=no
+OVERRIDE_REPORTS=yes
 #open_reports_after_execution--> yes or no
 open_reports_after_execution=yes
 #send_email_to_users --> yes or no
