--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,5 +1,5 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=report.html
+extent.reporter.spark.out=ExtentReport.html
 #Adding folder name and non repeating pattern
 basefolder.name=CucumberReports/CucumberExtentReport
 basefolder.datetimepattern=dd-MM-YYYY
@@ -8,4 +8,4 @@ screenshot.dir=Screenshots/
 screenshot.rel.path=./Screenshots/
 #PDF File
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=report.pdf
+extent.reporter.pdf.out=ExtentReport.pdf
