Update PDF report

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,7 +1,8 @@
 extent.reporter.spark.start=true
 extent.reporter.spark.out=ExtentReport.html
+extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 #Adding folder name and non repeating pattern
-basefolder.name=CucumberReports/CucumberExtentReport
+basefolder.name=target/CucumberReports/CucumberExtentReport
 basefolder.datetimepattern=dd-MM-YYYY
 #Screenshot
 screenshot.dir=Screenshots/
