Update PDF report

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -9,4 +9,4 @@ screenshot.dir=Screenshots/
 screenshot.rel.path=./Screenshots/
 #PDF File
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=ExtentReport.pdf
+extent.reporter.pdf.out=PdfReport.pdf
