--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -26,8 +26,9 @@ REMOTE_PORT=4444
 # Report information
 PROJECT_NAME=Automation Framework Selenium | Anh Tester
 REPORT_TITLE=Report | Automation Framework Selenium | Anh Tester
-EXTENT_REPORT_NAME=CucumberExtentReport
-EXTENT_REPORT_FOLDER=target/CucumberReports/CucumberExtentReport
+EXTENT_REPORT_NAME=ExtentReport
+EXTENT_REPORT_FOLDER=reports/CucumberExtentReports
+EXTENT_REPORT_PDF=PdfReport.pdf
 EXPORT_VIDEO_PATH=ExportData/Videos
 EXPORT_CAPTURE_PATH=ExportData/Images
 # Send report to Telegram Bot --> yes or no
@@ -37,8 +38,8 @@ TELEGRAM_TOKEN=
 TELEGRAM_CHATID=
 # Zip folder report after run test --> yes or no
 ZIP_FOLDER=yes
-ZIP_FOLDER_PATH=target/CucumberReports
-ZIP_FOLDER_NAME=CucumberReports.zip
+ZIP_FOLDER_PATH=reports/CucumberExtentReports
+ZIP_FOLDER_NAME=CucumberExtentReports.zip
 # Video Record
 VIDEO_RECORD=no
 #override_reports --> yes or no
@@ -52,7 +53,7 @@ open_reports_after_execution=yes
 #send_email_to_users --> yes or no
 #If yes -> then, provide your mail credentials -> src/main/java -> package anhtester.com.mail.EmailConfig;
 # This Email will be sent using Java mail API
-send_email_to_users=no
+send_email_to_users=yes
 # PassedStepsScreenshot --> yes or no
 screenshot_passed_steps=no
 # FailedStepsScreenshot --> yes or no
