--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,12 +1,12 @@
 extent.reporter.spark.start=true
-extent.reporter.spark.out=ExtentReport.html
+extent.reporter.spark.out=reports/CucumberExtentReports/ExtentReport.html
 extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,log
 #Adding folder name and non repeating pattern
-basefolder.name=target/CucumberReports/CucumberExtentReport
-basefolder.datetimepattern=dd-MM-YYYY
+#basefolder.name=reports/CucumberReports/CucumberExtentReport
+#basefolder.datetimepattern=dd-MM-YYYY
 #Screenshot
 screenshot.dir=Screenshots/
 screenshot.rel.path=./Screenshots/
 #PDF File
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=PdfReport.pdf
+extent.reporter.pdf.out=reports/CucumberExtentReports/PdfReport.pdf
