--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>anhtester.com</groupId>
     <artifactId>AutomationFrameworkCucumberTestNG</artifactId>
-    <version>1.1.0</version>
+    <version>1.2.0</version>
     <name>AutomationFrameworkCucumberTestNG</name>
     <url>https://github.com/anhtester/AutomationFrameworkCucumberTestNG</url>
 
@@ -18,16 +18,16 @@
         <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
 
-        <cucumber.java.version>7.8.0</cucumber.java.version>
-        <gherkin.version>24.0.0</gherkin.version>
+        <cucumber.java.version>7.8.1</cucumber.java.version>
+        <gherkin.version>25.0.2</gherkin.version>
         <cucumber-reporting.version>5.7.0</cucumber-reporting.version>
-        <selenium.version>4.5.0</selenium.version>
+        <selenium.version>4.6.0</selenium.version>
         <testng.version>7.6.1</testng.version>
-        <webdrivermanager.version>5.3.0</webdrivermanager.version>
+        <webdrivermanager.version>5.3.1</webdrivermanager.version>
         <aspectjweaver.version>1.9.9.1</aspectjweaver.version>
         <ashot.version>1.5.4</ashot.version>
         <log4j.version>2.19.0</log4j.version>
-        <allure-testng.version>2.19.0</allure-testng.version>
+        <allure-testng.version>2.20.0</allure-testng.version>
         <allure-maven.version>2.10.0</allure-maven.version>
         <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
         <allure.cmd.download.url>
@@ -42,16 +42,17 @@
         <javafaker.version>1.0.2</javafaker.version>
         <monte-screen-recorder.version>0.7.7.0</monte-screen-recorder.version>
         <mysql-connector-java.version>8.0.30</mysql-connector-java.version>
-        <google.zxing.version>3.5.0</google.zxing.version>
+        <google.zxing.version>3.5.1</google.zxing.version>
         <lombok.version>1.18.24</lombok.version>
         <google.guava.version>31.1-jre</google.guava.version>
         <data.supplier.version>1.9.7</data.supplier.version>
         <javax.mail.version>1.6.2</javax.mail.version>
         <zip.version>1.15</zip.version>
-        <jackson.version>2.13.4</jackson.version>
+        <jackson.version>2.14.0</jackson.version>
 
 
         <!-- Suite XML path -->
+        <suite.signin.parallel>src/test/resources/suites/SignIn-parallel-methods.xml</suite.signin.parallel>
         <suite.signin.simple>src/test/resources/suites/SignIn-simple.xml</suite.signin.simple>
         <suite.client.parallel>src/test/resources/suites/Clients-parallel.xml</suite.client.parallel>
         <suite.client.simple>src/test/resources/suites/Clients-simple.xml</suite.client.simple>
@@ -111,18 +112,24 @@
             <version>${extentreports.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>pdfextentreporter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
         <dependency>
             <groupId>tech.grasshopper</groupId>
             <artifactId>extentreports-cucumber7-adapter</artifactId>
-            <version>1.7.0</version>
+            <version>1.9.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/tech.grasshopper/extent-pdf-report -->
         <dependency>
             <groupId>tech.grasshopper</groupId>
             <artifactId>extent-pdf-report</artifactId>
-            <version>2.7.0</version>
+            <version>2.8.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/tech.grasshopper/cucumber-pdf-report -->
@@ -363,7 +370,61 @@
         </profile>
 
         <profile>
-            <id>feature-file</id>
+            <id>clients-parallel</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>${suite.client.parallel}</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>signin-parallel</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>${suite.signin.parallel}</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>signin-simple</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin.version}</version>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>${suite.signin.simple}</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>feature-gherkin</id>
             <build>
                 <plugins>
                     <plugin>
