--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -37,7 +37,7 @@ SEND_REPORT_TO_TELEGRAM=no
 TELEGRAM_TOKEN=
 TELEGRAM_CHATID=
 # Zip folder report after run test --> yes or no
-ZIP_FOLDER=yes
+ZIP_FOLDER=no
 ZIP_FOLDER_PATH=reports/CucumberExtentReports
 ZIP_FOLDER_NAME=CucumberExtentReports.zip
 # Video Record
@@ -49,11 +49,11 @@ VIDEO_RECORD=no
 #If yes -> Report name will be ExtentReports.html
 OVERRIDE_REPORTS=yes
 #open_reports_after_execution--> yes or no
-open_reports_after_execution=yes
+open_reports_after_execution=no
 #send_email_to_users --> yes or no
 #If yes -> then, provide your mail credentials -> src/main/java -> package anhtester.com.mail.EmailConfig;
 # This Email will be sent using Java mail API
-send_email_to_users=yes
+send_email_to_users=no
 # PassedStepsScreenshot --> yes or no
 screenshot_passed_steps=no
 # FailedStepsScreenshot --> yes or no
