Update version 1.2.0 PREVIEW

--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -5,8 +5,8 @@ extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,
 #basefolder.name=reports/CucumberReports/CucumberExtentReport
 #basefolder.datetimepattern=dd-MM-YYYY
 #Screenshot
-screenshot.dir=Screenshots/
-screenshot.rel.path=/Screenshots/
+screenshot.dir=screenshots/
+screenshot.rel.path=/screenshots/
 #PDF File
 extent.reporter.pdf.start=true
 extent.reporter.pdf.out=reports/CucumberExtentReports/CucumberExtentPdfReport.pdf
