--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -7,6 +7,12 @@ extent.reporter.spark.vieworder=dashboard,test,category,exception,author,device,
 #Screenshot
 screenshot.dir=screenshots/
 screenshot.rel.path=/screenshots/
+
+extent.reporter.spark.base64imagesrc=true
+
 #PDF File
 extent.reporter.pdf.start=true
 extent.reporter.pdf.out=reports/CucumberExtentReports/CucumberExtentPdfReport.pdf
+
+extent.reporter.excel.start=true
+extent.reporter.excel.out=reports/ExcelReport/ExtentExcel.xlsx
