--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,5 +1,6 @@
 #Declare loggers
-status=warn
+log4j.logger.io.qameta.allure.AllureLifecycle = OFF
+status=error
 name=Log4j2PropertiesConfig
 appenders=a_console, a_rolling
 rootLogger.level=info
