--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,15 @@
         <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
 
-        <cucumber.java.version>7.12.1</cucumber.java.version>
+        <cucumber.java.version>7.13.0</cucumber.java.version>
         <gherkin.version>26.2.0</gherkin.version>
         <cucumber-reporting.version>5.7.5</cucumber-reporting.version>
         <selenium.version>4.10.0</selenium.version>
         <testng.version>7.8.0</testng.version>
-        <webdrivermanager.version>5.3.3</webdrivermanager.version>
+        <webdrivermanager.version>5.4.0</webdrivermanager.version>
         <aspectjweaver.version>1.9.19</aspectjweaver.version>
-        <log4j.version>2.20.0</log4j.version>
-        <allure-testng.version>2.22.2</allure-testng.version>
+        <log4j.version>3.0.0-alpha1</log4j.version>
+        <allure-testng.version>2.23.0</allure-testng.version>
         <allure-maven.version>2.12.0</allure-maven.version>
         <allure-environment-writer.version>1.0.0</allure-environment-writer.version>
         <allure.cmd.download.url>
@@ -42,7 +42,7 @@
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <google.zxing.version>3.5.1</google.zxing.version>
         <lombok.version>1.18.28</lombok.version>
-        <google.guava.version>32.0.1-jre</google.guava.version>
+        <google.guava.version>32.1.1-jre</google.guava.version>
         <data.supplier.version>1.9.7</data.supplier.version>
         <javax.mail.version>1.6.2</javax.mail.version>
         <zip.version>1.15</zip.version>
