--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 /bin/
-/.idea
-/.allure
-/allure-results
-/ExportData
-/ExtentReports
+out/
+.idea/
+.allure/
+allure-results/
+ExportData/
+ExtentReports/
 ExtentReports.zip
-/logs
-/target
-/test-output
-/reports
-/CucumberReports
+logs/
+target/
+test-output/
+reports/
+CucumberReports/
 HDSD.txt
 *.png
 *.jpg
