--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -3,7 +3,7 @@ AUTHOR = Anh Tester
 WAIT_DEFAULT = 5
 WAIT_IMPLICIT = 20
 WAIT_EXPLICIT = 10
-WAIT_PAGE_LOADED = 30
+WAIT_PAGE_LOADED = 40
 # Smart Wait all steps
 # ACTIVE_PAGE_LOADED=true shall wait for the page to load for every step
 ACTIVE_PAGE_LOADED = true
@@ -37,7 +37,7 @@ ZIP_FOLDER = no
 ZIP_FOLDER_PATH = reports/CucumberExtentReports
 ZIP_FOLDER_NAME = CucumberExtentReports.zip
 # Video Record
-VIDEO_RECORD = no
+VIDEO_RECORD = yes
 #override_reports --> yes or no
 #If no -> Report name will be like
 #   - Windows_10_Tue_Oct_05_02_30_46_IST_2022_ExtentReports.html
