--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -14,5 +14,5 @@ extent.reporter.spark.base64imagesrc=true
 extent.reporter.pdf.start=true
 extent.reporter.pdf.out=reports/CucumberExtentReports/CucumberExtentPdfReport.pdf
 
-extent.reporter.excel.start=true
+extent.reporter.excel.start=false
 extent.reporter.excel.out=reports/ExcelReport/ExtentExcel.xlsx
